try to fix overflow style

--- a/src/components/chat/chat.scss
+++ b/src/components/chat/chat.scss
@@ -26,6 +26,8 @@
     padding: 30px;
     min-width: 100%;
     flex-grow: 3;
+    max-height: 100%;
+    overflow: auto;
 }
 
 p {
